Fixed process section on landing page, and text readability

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -6,7 +6,7 @@ $dark-blue: #003F91;
 $medium-blue: #5DA9E9;
 $light-blue: #F5FBFF;
 $white: #FFFFFF;
-$grey: #777676;
+$grey: #5A5A5A;
 
 $mediaMaxWidth: 1274px;
 $mediaBp1Width: 960px;
@@ -18,6 +18,11 @@ $mediaMinWidth: 480px;
    -moz-border-radius: 20px;
    -ms-border-radius: 20px;
    -o-border-radius: 20px;
+}
+
+/* Margin between the intro text and the section's main content*/
+@mixin intro-content-margin {
+   margin-top: 5rem;
 }
 
 :root {
@@ -48,6 +53,7 @@ html {
    box-sizing: inherit;
    scroll-behavior: smooth;
    height: -webkit-fill-available;
+   overflow-x: hidden;
 }
 
 body {
@@ -102,6 +108,11 @@ button {
    &:hover {
       color: $dark-blue;
    }
+}
+
+.btn-center-position {
+   margin-left: 45%;
+   width: 5rem;
 }
 
 img,
@@ -407,39 +418,50 @@ video {
    }
 }
 
+/* Typography*/
+
 h1 {
-   font-size: 2.8rem;
+   font-size: 2.5rem; /* 2.5 times body text*/
+   color: $dark-blue;
+   font-weight: 700;
+}
+
+h2 {
+   font-size: 2.25rem; /* 2.25 times body text*/
+   color: $dark-blue;
+   font-weight: 700;
+   margin: 2rem 0;
+}
+
+h3 {
+   font-size: 2rem; /* 2 times body text*/
+   color: $dark-blue;
+   font-weight: 300;
+}
+
+h4 {
+   font-size: 1.75rem; /* 1.75 times body text*/
    color: $dark-blue;
 }
 
 .hero-text {
-   font-size: 1.4rem;
+   font-size: 1.5rem; /* 1.5 times body text*/
    color: $grey;
    font-weight: 300;
-   margin-top: 2rem;
+   margin: 2rem 0;
 }
 
-h2 {
-   color: $dark-blue;
-   font-size: 2rem;
-}
-
-h3 {
-   margin-top: 2rem;
-   margin-left: 10vw;
-   font-size: 1.5rem;
+.intro-text {
+   font-size: 1.25rem; /* 1.25 times body text*/
    color: $grey;
-   font-weight: 300;
+   font-weight: 500;
 }
 
-.bodytext {
-   font-size: 1rem;
+p {
+   font-size: 1rem; /* body text */
+   color: $grey;
 }
 
-h4 {
-   color: $dark-blue;
-   font-size: 1.5rem;
-}
 
 .hero-section {
    display: grid;
@@ -453,7 +475,7 @@ h4 {
 
    &-right>img {
       margin-top: 8rem;
-      width: 70%;
+      width: 75%;
       position: relative;
       float: right;
    }
@@ -510,40 +532,44 @@ h4 {
 
 .process-section {
    @include w-h-m;
-   position: relative;
-   width: 100vw;
-
-   &>h2 {
-      margin-top: 2rem;
-      margin-bottom: 1rem;
-   }
+   margin: 0 10vw;
 
    &-grid {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       width: 100%;
+      @include intro-content-margin;
+      justify-items: start;
 
-      &>div>img {
-         scale: .5;
-         position: relative;
-         right: 5rem;
-         bottom: 13rem;
-      }
-
-      &>div>p {
-         margin-left: 8rem;
-         width: 55%;
+      &>div{
+         margin-bottom: 2.5rem;
+         width: 80%;
          display: inline-block;
-
       }
-   }
 
-   &>a {
-      margin-left: 45%;
-      text-decoration: underline;
-      position: absolute;
-      bottom: 10rem;
-      font-size: 1.5rem
+      &>.step-2{
+         justify-self: center;
+      }
+
+      &>.step-3{
+         justify-self: end;
+      }
+
+      &>div>img, .step{
+         display: inline-block;
+      }
+
+      &>div>.step{
+         font-size: 3rem;
+         color: $dark-blue;
+         font-weight: 700;
+         margin-left: 1rem;
+      }
+
+      &>div>p{
+         margin-top: 1.5rem;
+      }
+
    }
 }
 
@@ -588,21 +614,17 @@ h4 {
 .prices-section {
    @include w-h-m;
 
-   &>h2 {
-      margin-bottom: 2rem;
-   }
-
    &>h4 {
       margin-bottom: 8rem;
-      font-size: 1rem;
    }
 
    &-grid {
       display: grid;
       grid-template-columns: 1fr .6fr 1fr;
+      @include intro-content-margin;
+
 
       &>div>h4 {
-         font-size: 1.5rem;
          margin-top: 1.5rem;
          margin-bottom: 4rem;
          text-align: center;
@@ -615,7 +637,7 @@ h4 {
 
       &>.hun-prices {
          color: $medium-blue;
-         background-color: white;
+         background-color: $white;
          box-shadow: 1px 1px 2px $dark-blue;
          @include borderrad;
       }
@@ -638,17 +660,12 @@ h4 {
       margin-top: 4rem;
    }
 
-   &>h4 {
-      margin-top: 3rem;
-      margin-bottom: 3rem;
-      font-size: 1rem;
-   }
-
    &-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 4rem;
       margin-bottom: 4rem;
+      @include intro-content-margin;
 
       &>img {
          width: 100%;
